; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/linux/extr_linux_util.c_linux_emul_convpath.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/linux/extr_linux_util.c_linux_emul_convpath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }

@linux_emul_path = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @linux_emul_convpath(%struct.thread* %0, i8* %1, i32 %2, i8** %3, i32 %4, i32 %5) #0 {
  %7 = alloca %struct.thread*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8**, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.thread* %0, %struct.thread** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32 %2, i32* %9, align 4
  store i8** %3, i8*** %10, align 8
  store i32 %4, i32* %11, align 4
  store i32 %5, i32* %12, align 4
  %14 = load %struct.thread*, %struct.thread** %7, align 8
  %15 = load i32, i32* @linux_emul_path, align 4
  %16 = load i8*, i8** %8, align 8
  %17 = load i32, i32* %9, align 4
  %18 = load i8**, i8*** %10, align 8
  %19 = load i32, i32* %11, align 4
  %20 = load i32, i32* %12, align 4
  %21 = call i32 @kern_alternate_path(%struct.thread* %14, i32 %15, i8* %16, i32 %17, i8** %18, i32 %19, i32 %20)
  store i32 %21, i32* %13, align 4
  %22 = load i32, i32* %13, align 4
  ret i32 %22
}

declare dso_local i32 @kern_alternate_path(%struct.thread*, i32, i8*, i32, i8**, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
